--- a/app/src/main/res/layout/signup_page_activity.xml
+++ b/app/src/main/res/layout/signup_page_activity.xml
@@ -255,7 +255,9 @@
         android:layout_marginEnd="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3">
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3"
+        app:endIconMode="password_toggle"
+        >
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="315dp"
