--- a/app/src/main/res/layout/fragment_transaction.xml
+++ b/app/src/main/res/layout/fragment_transaction.xml
@@ -1,14 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="345dp"
+    android:layout_height="309dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".FragmentTransaction">
 
     <!-- TODO: Update blank fragment layout -->
+
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/image_home"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="16dp"
+        android:contentDescription="@string/avatar_profile"
+        android:src="@drawable/profile_picture"
+        app:shapeAppearanceOverlay="@style/radius"
+        />
+
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_width="85dp"
+        android:layout_height="21dp"
+        android:layout_marginStart="57dp"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/jua_regular"
+        android:text="@string/yara_khalil"
+        android:textSize="14sp" />
+    <TextView
+        android:layout_width="91dp"
+        android:layout_height="18dp"
+        android:textColor="@color/blacksuperopacity"
+        android:text="@string/oct_14_10_24_am"
+        android:fontFamily="@font/jua_regular"
+        android:layout_marginStart="57dp"
+        android:layout_marginTop="38dp"
+/>
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="57dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="288dp"
+        android:layout_marginTop="24dp"
+        android:fontFamily="@font/jua_regular"
+        android:text="@string/_15_00"
+        android:textColor="@color/black"
+        android:textSize="16sp" />
 
 </FrameLayout>
