--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,8 @@
     <color name="blackopacity">#411A1A1A</color>
     <color name="celsteoscuro">#1A87DD</color>
     <color name="green">#72DB31</color>
+    <color name="blacksuperopacity">#651A1A1A</color>
+
 
 
 </resources>
