Modulo4 actualizacion tarea

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,8 @@
     <color name="celsteoscuro">#1A87DD</color>
     <color name="green">#72DB31</color>
     <color name="blacksuperopacity">#651A1A1A</color>
+    <color name="whiteyellow">#F3F4F5</color>
+
 
 
 
